--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,10 +13,22 @@
 
 
 header {
-    background-color: rgb(196, 231, 206);
+    background-color: rgba(50, 53, 54, 0.881);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     padding: 20px;
 }
 
+header div {
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+}
+
+header h1 {
+    color: whitesmoke;
+    font-size: 40px;
+    font-weight: bold;
+    background-color: rgba(189, 93, 93, 0.778)
+    padding: 10px;
+    border: 0.5 solid;
+}
