--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,4 @@
 
-:root {
-    --primary: #203d93;
-    --secondary: #344856;
-    --pop: #581550;
-}
 
 * {
     margin: 0;
@@ -11,55 +6,56 @@
     box-sizing: border-box
 }
 
+body {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    line-height: 1.5;
+}
 
 header {
-    background-color: rgba(50, 53, 54, 0.881);
+    background-color: #31343d;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 20px;
-}
-
-header div {
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+    padding: 5px;
 }
 
 header h1 {
-    color: whitesmoke;
-    font-size: 40px;
-    font-weight: bold;
-    background-color: rgba(189, 93, 93, 0.778)
-    padding: 10px;
-    border: 0.5 solid;
+    background-color: #92cccd;
+    font-size: 55px;
+    line-height: normal;
+    padding: 0 15px 0 5%;
+}
+
+header h1 a {
+    text-decoration: none;
+    color: #31343d;
+}
+
+header nav {
+    padding-right: 5%;
+}
+
+.topNav {
+    display: flex;
+}
+
+.topNav li {
+    padding: 5px;
+}
+
+.topNav a {
+    color: #92cccd;
+    font-size: 25px;
+    text-decoration: none;
+    padding: 3px 8px;
+    border-bottom: 5px solid #445876;
 }
 
 .hero {
-    height: 400px;
+    background-image: url("../images/hero-banner1.png");
+    background-position: top;
     background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color: #581550;
-}
-.container {
-    width: 90px;
-    padding-bottom: 120px;
-    margin: 30px auto; 0px auto; 
-    display: grid;
-    grid-template-columns: 15% 80%
-}
-
-.about-me {
-    border-right: 4px solid;
-    font-size: 40px;
-    text-align: end;
-    padding-right: 15px;
-}
-
-h2 {
-    color: #344856;
-    text-align: end;
-    font-size: clamp(2rem, 3vw, 3rem);
-    font-weight: 800;
+    background-attachment: fixed;
+    height: 190px;
+    position: relative;
 }
