--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    line-height: 1.5;
+    line-height: none ;
 }
 
 header {
@@ -16,13 +16,13 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 10px;
+    padding: 15px;
 }
 
 header h1 {
     background-color: #92cccd;
     font-size: 50px;
-    line-height: normal;
+    line-height: normal
     padding: 0 20px 0 5%;
 }
 
@@ -40,15 +40,15 @@ header nav {
 }
 
 .topNav li {
-    padding: 5px;
+    padding: 3px;
 }
 
 .topNav a {
     color: #92cccd;
     font-size: 25px;
     text-decoration: none;
-    padding: 3px 8px;
-    border-bottom: 5px solid #445876;
+    padding: 3px 10px;
+    border-bottom: 4px solid #445876;
 }
 
 .hero {
@@ -56,7 +56,7 @@ header nav {
     background-position: top;
     background-size: cover;
     background-attachment: fixed;
-    height: 190px;
+    height: 210px;
     position: relative;
 }
 
@@ -99,8 +99,11 @@ h2 {
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     grid-template-rows: 460px 210px 210px;
-    grid-template-areas: "fig0" "fig1" "fig2" "fig3" "fig4";
-    gap: 50px;
+    grid-template-areas: 
+    "fig0 fig0" 
+    "fig1 fig2" 
+    "fig3 fig4";
+    gap: 35px;
 }
 
 #portfolio a {
@@ -127,19 +130,142 @@ h2 {
 figure {
     width: 100%;
     position: relative;
-    border: 3px solid #92cccd;
+    border: 4px solid #92cccd;
 }
 
 #portfolio img {
     object-fit: cover;
     width: 100%;
     filter: sepia(40%);
-    opacity: 80%;
+    opacity: 75%;
 }
 
 figcaption {
     background-color: #92cccd;
     padding: 10px;
     position: absolute;
-    bottom: 32px;
+    bottom: 40px;
+}
+
+#contact {
+    height: 210px;
+}
+
+.bottomNav {
+    display: flex;
+}
+
+.bottomNav ul {
+    height: 210px;
+    min-height: calc(100vh - 15rem);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    margin-top: 50px;
+    padding: 25px;
+}
+
+.bottomNav a {
+    color: #445876;
+    display: inline-block;
+    font-size: 20px;
+    margin-left: 15px;
+    padding: 3px;
+}
+
+@media screen and (max-width: 900px) {
+    body {
+        background-color: green;
+        background-image: radial-gradient(whitesmoke, green);
+    }
+
+header {
+    background-color: #31343d;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0%;
+    }    
+
+header h1 {
+    width: 100%;
+    margin: 0;
+    padding: 0; 
+    text-align: center;
+    }
+
+ header nav {
+        padding: 0%;
+    }
+
+nav {
+        display: block;
+        width: 100%;
+        margin: 0% auto;
+        display: flex;
+        justify-content: space-between;
+    }
+
+.topNav {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+
+ .topNav a {
+        color: #92cccd;
+        font-size: 20px;
+        border-bottom: 3px solid #92cccd;
+        padding: 0 5px 0 5px;
+        display: flex;
+        justify-content: center;
+    }
+
+.container {
+        width: 95%;
+        margin: 38px auto 0px auto;
+        display: grid;
+        grid-template-columns: 95%
+    }
+
+#portfolio {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 200px 200px 200px 200px 200px;
+        grid-template-areas: 
+        "fig0"
+        "fig1"
+        "fig2"
+        "fig3"
+        "fig4"
+    }
+
+.page-section {
+        border-right: 0;
+        border-bottom: 4px solid #445876;
+        font-size: 40px;
+        text-align: end;
+        padding-right: 15px;
+    }
+
+h2 {
+        text-align: center;
+    }
+
+#portfolio img {
+        height: 190px;
+    }
+
+ .bottomNav ul {
+        padding: 0%;
+        flex-direction: column;
+        align-items: center;
+    }
+
 }
