--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,18 +5,18 @@
     padding: 0;
     box-sizing: border-box
 }
-
+/* Entire body styling */
 body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    line-height: none ;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
+/* Header section styling*/
 header {
     background-color: #31343d;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding: 15px;
+    padding: 10px;
 }
 
 header h1 {
@@ -37,10 +37,12 @@ header nav {
 
 .topNav {
     display: flex;
+    height: 70px;
 }
 
 .topNav li {
-    padding: 3px;
+    padding: 8px;
+    list-style-type: none;
 }
 
 .topNav a {
@@ -50,36 +52,41 @@ header nav {
     padding: 3px 10px;
     border-bottom: 4px solid #445876;
 }
-
+/* hero section styling*/
 .hero {
     background-image: url("../images/hero-banner1.png");
     background-position: top;
     background-size: cover;
     background-attachment: fixed;
-    height: 210px;
+    height: 300px;
     position: relative;
 }
 
 .hero h2 {
     background-color: #92cccd;
     color: #31343d;
-    font-size: 30px;
+    font-size: 40px;
+    font-style:oblique;
     padding: 0 10px;
     justify-content: center;
     position: absolute;
     bottom: 18px;
-    right: 10px;
+    right: 15px;
 }
 
+/* styles container */
 .container {
-    width: 96%;
+    width: 100%; 
+    font-size: 20px;
     padding-bottom: 120px;
-    margin: 42px auto 0 auto;
-    display: grid;
+    margin: 40px auto 0px auto;
+    display: grid; 
+    justify-content: center;
     grid-template-columns: 15% 75%;
-    gap: 6%;
+    gap: 5%;
 }
 
+/* Page-section styling */
 .page-section {
     border-right: 3px solid #445876;
     font-size: 35px;
@@ -91,93 +98,115 @@ h2 {
     color: #31343d;
     text-align: right;
     font-size: clam(2rem, 4vw, 4rem);
-    font-weight: 700;
+    font-weight: bold;
 }
+
+/*Styling for portfolio section */
 
 #portfolio {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1.5fr;
-    grid-template-rows: 460px 210px 210px;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: 570px 260px 260px;
     grid-template-areas: 
     "fig0 fig0" 
     "fig1 fig2" 
     "fig3 fig4";
-    gap: 35px;
+    gap: 20px;
 }
 
+
+#portfolio img {
+    object-fit: cover;
+    width: 100%;
+    filter: sepia(25%);
+    opacity: 95%;
+}
+
+
 #portfolio a {
+    height: 100%;
     color: #31343d;
     text-decoration: none;
 }
 
+
 .fig0 {
     grid-area: fig0;
+
 }
+
 .fig1 {
     grid-area: fig1;
+    
+   
 }
 .fig2 {
     grid-area: fig2;
+    
 }
 .fig3 {
     grid-area: fig3;
+    
 }
 .fig4 {
     grid-area: fig4;
+   
+
+    
 }
 
+/* Styles figure section */
 figure {
     width: 100%;
     position: relative;
     border: 4px solid #92cccd;
 }
 
-#portfolio img {
-    object-fit: cover;
-    width: 100%;
-    filter: sepia(40%);
-    opacity: 75%;
-}
 
 figcaption {
     background-color: #92cccd;
-    padding: 10px;
+    padding: 18px;
     position: absolute;
-    bottom: 40px;
+    bottom: 25px;
 }
 
+/* Styles contact me and footer section*/
 #contact {
-    height: 210px;
+    height: 190px;
 }
 
 .bottomNav {
     display: flex;
+    list-style-type: none;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .bottomNav ul {
-    height: 210px;
+    height: 200px;
     min-height: calc(100vh - 15rem);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
     margin-top: 50px;
-    padding: 25px;
+    padding: 30px;
 }
 
 .bottomNav a {
-    color: #445876;
+    color: #195787;
     display: inline-block;
-    font-size: 20px;
-    margin-left: 15px;
-    padding: 3px;
+    font-size: 25px;
+    margin-left: 10px;
+    padding: 15px;
 }
 
+/* Media query for smaller desktop and mobile device screen*/
 @media screen and (max-width: 900px) {
     body {
-        background-color: green;
-        background-image: radial-gradient(whitesmoke, green);
+        background-color: rgba(6, 11, 22, 0.388);
+        background-image: radial-gradient rgba(27, 29, 17, 0.685), #493633b5);
     }
 
 header {
@@ -242,13 +271,14 @@ nav {
         "fig0"
         "fig1"
         "fig2"
-        "fig3"
+        "fig3" 
         "fig4"
+        
     }
 
 .page-section {
         border-right: 0;
-        border-bottom: 4px solid #445876;
+        border-bottom: 3px solid #445876;
         font-size: 40px;
         text-align: end;
         padding-right: 15px;
