--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,7 @@
 }
 /* Entire body styling */
 body {
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 /* Header section styling*/
@@ -66,7 +66,7 @@ header nav {
     background-color: #92cccd;
     color: #31343d;
     font-size: 40px;
-    font-style:oblique;
+    font-style: oblique;
     padding: 0 10px;
     justify-content: center;
     position: absolute;
